# RAG_chatbot_prototype

./: .gitignore  README.md  check_collection.py  debug_query.py  modern-light-theme-prompt.md  pyproject.toml  react-vite-migration-prompt.md  start-backend.bat  start-frontend.bat  streamlit-modern-light-prompt.md  test_api.py  test_full_rag.py  test_query.py  test_rag_direct.py
app/: auth.py  embeddings.py  rag_chain.py  splitter.py  ui.py  vectorstore.py
backend/: main.py  requirements.txt
backend/chromadb/94aa0c70-d818-4b5d-bd4c-ebadd7800e23/: index_metadata.pickle
backend/chromadb/9b4d748b-1375-48c5-9b81-9571f19026eb/: index_metadata.pickle
backend/routers/: __init__.py  auth.py  health.py  query.py
chromadb/: chroma.sqlite3
frontend/: .env.production  package-lock.json  tailwind.config.js.backup
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  client.js  health.js  query.js
frontend/src/components/: Alert.jsx  Button.jsx  Card.jsx  Header.jsx  Input.jsx  LoadingSpinner.jsx  Metric.jsx  Sidebar.jsx  SourcePassage.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Chat.jsx  Login.jsx  NotFound.jsx
scripts/: clear_users.py  fix_passwords.py  ingest.py  setup_mongo.py  test_auth.py
